// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/radio/demo/basic.md correctly 1`] = `
<label
  class="ant-radio-wrapper"
>
  <span
    class="ant-radio"
  >
    <input
      class="ant-radio-input"
      type="radio"
    >
      
    </input>
    <span
      class="ant-radio-inner"
    >
      
    </span>
  </span>
  <span>
    Radio
  </span>
</label>
`;

exports[`renders ./components/radio/demo/disable.md correctly 1`] = `
<div>
  <label
    class="ant-radio-wrapper ant-radio-wrapper-disabled"
  >
    <span
      class="ant-radio ant-radio-disabled"
    >
      <input
        class="ant-radio-input"
        disabled=""
        type="radio"
      >
        
      </input>
      <span
        class="ant-radio-inner"
      >
        
      </span>
    </span>
    <span>
      Disabled
    </span>
  </label>
  <br>
    
  </br>
  <label
    class="ant-radio-wrapper ant-radio-wrapper-disabled"
  >
    <span
      class="ant-radio ant-radio-checked ant-radio-disabled"
    >
      <input
        checked=""
        class="ant-radio-input"
        disabled=""
        type="radio"
      >
        
      </input>
      <span
        class="ant-radio-inner"
      >
        
      </span>
    </span>
    <span>
      Disabled
    </span>
  </label>
  <div
    style="margin-top:20px"
  >
    <button
      class="ant-btn ant-btn-primary"
      type="button"
    >
      <span>
        Toggle disabled
      </span>
    </button>
  </div>
</div>
`;

exports[`renders ./components/radio/demo/radiobutton.md correctly 1`] = `
<div>
  <div>
    <div
      class="ant-radio-group"
    >
      <label
        class="ant-radio-button-wrapper ant-radio-button-wrapper-checked"
      >
        <span
          class="ant-radio-button ant-radio-button-checked"
        >
          <input
            checked=""
            class="ant-radio-button-input"
            type="radio"
          >
            
          </input>
          <span
            class="ant-radio-button-inner"
          >
            
          </span>
        </span>
        <span>
          Hangzhou
        </span>
      </label>
      <label
        class="ant-radio-button-wrapper"
      >
        <span
          class="ant-radio-button"
        >
          <input
            class="ant-radio-button-input"
            type="radio"
          >
            
          </input>
          <span
            class="ant-radio-button-inner"
          >
            
          </span>
        </span>
        <span>
          Shanghai
        </span>
      </label>
      <label
        class="ant-radio-button-wrapper"
      >
        <span
          class="ant-radio-button"
        >
          <input
            class="ant-radio-button-input"
            type="radio"
          >
            
          </input>
          <span
            class="ant-radio-button-inner"
          >
            
          </span>
        </span>
        <span>
          Beijing
        </span>
      </label>
      <label
        class="ant-radio-button-wrapper"
      >
        <span
          class="ant-radio-button"
        >
          <input
            class="ant-radio-button-input"
            type="radio"
          >
            
          </input>
          <span
            class="ant-radio-button-inner"
          >
            
          </span>
        </span>
        <span>
          Chengdu
        </span>
      </label>
    </div>
  </div>
  <div
    style="margin-top:16px"
  >
    <div
      class="ant-radio-group"
    >
      <label
        class="ant-radio-button-wrapper ant-radio-button-wrapper-checked"
      >
        <span
          class="ant-radio-button ant-radio-button-checked"
        >
          <input
            checked=""
            class="ant-radio-button-input"
            type="radio"
          >
            
          </input>
          <span
            class="ant-radio-button-inner"
          >
            
          </span>
        </span>
        <span>
          Hangzhou
        </span>
      </label>
      <label
        class="ant-radio-button-wrapper ant-radio-button-wrapper-disabled"
      >
        <span
          class="ant-radio-button ant-radio-button-disabled"
        >
          <input
            class="ant-radio-button-input"
            disabled=""
            type="radio"
          >
            
          </input>
          <span
            class="ant-radio-button-inner"
          >
            
          </span>
        </span>
        <span>
          Shanghai
        </span>
      </label>
      <label
        class="ant-radio-button-wrapper"
      >
        <span
          class="ant-radio-button"
        >
          <input
            class="ant-radio-button-input"
            type="radio"
          >
            
          </input>
          <span
            class="ant-radio-button-inner"
          >
            
          </span>
        </span>
        <span>
          Beijing
        </span>
      </label>
      <label
        class="ant-radio-button-wrapper"
      >
        <span
          class="ant-radio-button"
        >
          <input
            class="ant-radio-button-input"
            type="radio"
          >
            
          </input>
          <span
            class="ant-radio-button-inner"
          >
            
          </span>
        </span>
        <span>
          Chengdu
        </span>
      </label>
    </div>
  </div>
  <div
    style="margin-top:16px"
  >
    <div
      class="ant-radio-group"
    >
      <label
        class="ant-radio-button-wrapper ant-radio-button-wrapper-checked ant-radio-button-wrapper-disabled"
      >
        <span
          class="ant-radio-button ant-radio-button-checked ant-radio-button-disabled"
        >
          <input
            checked=""
            class="ant-radio-button-input"
            disabled=""
            type="radio"
          >
            
          </input>
          <span
            class="ant-radio-button-inner"
          >
            
          </span>
        </span>
        <span>
          Hangzhou
        </span>
      </label>
      <label
        class="ant-radio-button-wrapper ant-radio-button-wrapper-disabled"
      >
        <span
          class="ant-radio-button ant-radio-button-disabled"
        >
          <input
            class="ant-radio-button-input"
            disabled=""
            type="radio"
          >
            
          </input>
          <span
            class="ant-radio-button-inner"
          >
            
          </span>
        </span>
        <span>
          Shanghai
        </span>
      </label>
      <label
        class="ant-radio-button-wrapper ant-radio-button-wrapper-disabled"
      >
        <span
          class="ant-radio-button ant-radio-button-disabled"
        >
          <input
            class="ant-radio-button-input"
            disabled=""
            type="radio"
          >
            
          </input>
          <span
            class="ant-radio-button-inner"
          >
            
          </span>
        </span>
        <span>
          Beijing
        </span>
      </label>
      <label
        class="ant-radio-button-wrapper ant-radio-button-wrapper-disabled"
      >
        <span
          class="ant-radio-button ant-radio-button-disabled"
        >
          <input
            class="ant-radio-button-input"
            disabled=""
            type="radio"
          >
            
          </input>
          <span
            class="ant-radio-button-inner"
          >
            
          </span>
        </span>
        <span>
          Chengdu
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`renders ./components/radio/demo/radiogroup.md correctly 1`] = `
<div
  class="ant-radio-group"
>
  <label
    class="ant-radio-wrapper ant-radio-wrapper-checked"
  >
    <span
      class="ant-radio ant-radio-checked"
    >
      <input
        checked=""
        class="ant-radio-input"
        type="radio"
      >
        
      </input>
      <span
        class="ant-radio-inner"
      >
        
      </span>
    </span>
    <span>
      A
    </span>
  </label>
  <label
    class="ant-radio-wrapper"
  >
    <span
      class="ant-radio"
    >
      <input
        class="ant-radio-input"
        type="radio"
      >
        
      </input>
      <span
        class="ant-radio-inner"
      >
        
      </span>
    </span>
    <span>
      B
    </span>
  </label>
  <label
    class="ant-radio-wrapper"
  >
    <span
      class="ant-radio"
    >
      <input
        class="ant-radio-input"
        type="radio"
      >
        
      </input>
      <span
        class="ant-radio-inner"
      >
        
      </span>
    </span>
    <span>
      C
    </span>
  </label>
  <label
    class="ant-radio-wrapper"
  >
    <span
      class="ant-radio"
    >
      <input
        class="ant-radio-input"
        type="radio"
      >
        
      </input>
      <span
        class="ant-radio-inner"
      >
        
      </span>
    </span>
    <span>
      D
    </span>
  </label>
</div>
`;

exports[`renders ./components/radio/demo/radiogroup-more.md correctly 1`] = `
<div
  class="ant-radio-group"
>
  <label
    class="ant-radio-wrapper ant-radio-wrapper-checked"
    style="display:block;height:30px;line-height:30px"
  >
    <span
      class="ant-radio ant-radio-checked"
    >
      <input
        checked=""
        class="ant-radio-input"
        type="radio"
      >
        
      </input>
      <span
        class="ant-radio-inner"
      >
        
      </span>
    </span>
    <span>
      Option A
    </span>
  </label>
  <label
    class="ant-radio-wrapper"
    style="display:block;height:30px;line-height:30px"
  >
    <span
      class="ant-radio"
    >
      <input
        class="ant-radio-input"
        type="radio"
      >
        
      </input>
      <span
        class="ant-radio-inner"
      >
        
      </span>
    </span>
    <span>
      Option B
    </span>
  </label>
  <label
    class="ant-radio-wrapper"
    style="display:block;height:30px;line-height:30px"
  >
    <span
      class="ant-radio"
    >
      <input
        class="ant-radio-input"
        type="radio"
      >
        
      </input>
      <span
        class="ant-radio-inner"
      >
        
      </span>
    </span>
    <span>
      Option C
    </span>
  </label>
  <label
    class="ant-radio-wrapper"
    style="display:block;height:30px;line-height:30px"
  >
    <span
      class="ant-radio"
    >
      <input
        class="ant-radio-input"
        type="radio"
      >
        
      </input>
      <span
        class="ant-radio-inner"
      >
        
      </span>
    </span>
    <span>
      More...
    </span>
  </label>
</div>
`;

exports[`renders ./components/radio/demo/radiogroup-options.md correctly 1`] = `
<div>
  <div
    class="ant-radio-group"
  >
    <label
      class="ant-radio-wrapper ant-radio-wrapper-checked"
    >
      <span
        class="ant-radio ant-radio-checked"
      >
        <input
          checked=""
          class="ant-radio-input"
          type="radio"
        >
          
        </input>
        <span
          class="ant-radio-inner"
        >
          
        </span>
      </span>
      <span>
        Apple
      </span>
    </label>
    <label
      class="ant-radio-wrapper"
    >
      <span
        class="ant-radio"
      >
        <input
          class="ant-radio-input"
          type="radio"
        >
          
        </input>
        <span
          class="ant-radio-inner"
        >
          
        </span>
      </span>
      <span>
        Pear
      </span>
    </label>
    <label
      class="ant-radio-wrapper"
    >
      <span
        class="ant-radio"
      >
        <input
          class="ant-radio-input"
          type="radio"
        >
          
        </input>
        <span
          class="ant-radio-inner"
        >
          
        </span>
      </span>
      <span>
        Orange
      </span>
    </label>
  </div>
  <div
    class="ant-radio-group"
  >
    <label
      class="ant-radio-wrapper ant-radio-wrapper-checked"
    >
      <span
        class="ant-radio ant-radio-checked"
      >
        <input
          checked=""
          class="ant-radio-input"
          type="radio"
        >
          
        </input>
        <span
          class="ant-radio-inner"
        >
          
        </span>
      </span>
      <span>
        Apple
      </span>
    </label>
    <label
      class="ant-radio-wrapper"
    >
      <span
        class="ant-radio"
      >
        <input
          class="ant-radio-input"
          type="radio"
        >
          
        </input>
        <span
          class="ant-radio-inner"
        >
          
        </span>
      </span>
      <span>
        Pear
      </span>
    </label>
    <label
      class="ant-radio-wrapper"
    >
      <span
        class="ant-radio"
      >
        <input
          class="ant-radio-input"
          type="radio"
        >
          
        </input>
        <span
          class="ant-radio-inner"
        >
          
        </span>
      </span>
      <span>
        Orange
      </span>
    </label>
  </div>
  <div
    class="ant-radio-group"
  >
    <label
      class="ant-radio-wrapper ant-radio-wrapper-checked"
    >
      <span
        class="ant-radio ant-radio-checked"
      >
        <input
          checked=""
          class="ant-radio-input"
          type="radio"
        >
          
        </input>
        <span
          class="ant-radio-inner"
        >
          
        </span>
      </span>
      <span>
        Apple
      </span>
    </label>
    <label
      class="ant-radio-wrapper"
    >
      <span
        class="ant-radio"
      >
        <input
          class="ant-radio-input"
          type="radio"
        >
          
        </input>
        <span
          class="ant-radio-inner"
        >
          
        </span>
      </span>
      <span>
        Pear
      </span>
    </label>
    <label
      class="ant-radio-wrapper"
    >
      <span
        class="ant-radio"
      >
        <input
          class="ant-radio-input"
          type="radio"
        >
          
        </input>
        <span
          class="ant-radio-inner"
        >
          
        </span>
      </span>
      <span>
        Orange
      </span>
    </label>
  </div>
</div>
`;

exports[`renders ./components/radio/demo/radiogroup-with-name.md correctly 1`] = `
<div
  class="ant-radio-group"
>
  <label
    class="ant-radio-wrapper ant-radio-wrapper-checked"
  >
    <span
      class="ant-radio ant-radio-checked"
    >
      <input
        checked=""
        class="ant-radio-input"
        name="radiogroup"
        type="radio"
      >
        
      </input>
      <span
        class="ant-radio-inner"
      >
        
      </span>
    </span>
    <span>
      A
    </span>
  </label>
  <label
    class="ant-radio-wrapper"
  >
    <span
      class="ant-radio"
    >
      <input
        class="ant-radio-input"
        name="radiogroup"
        type="radio"
      >
        
      </input>
      <span
        class="ant-radio-inner"
      >
        
      </span>
    </span>
    <span>
      B
    </span>
  </label>
  <label
    class="ant-radio-wrapper"
  >
    <span
      class="ant-radio"
    >
      <input
        class="ant-radio-input"
        name="radiogroup"
        type="radio"
      >
        
      </input>
      <span
        class="ant-radio-inner"
      >
        
      </span>
    </span>
    <span>
      C
    </span>
  </label>
  <label
    class="ant-radio-wrapper"
  >
    <span
      class="ant-radio"
    >
      <input
        class="ant-radio-input"
        name="radiogroup"
        type="radio"
      >
        
      </input>
      <span
        class="ant-radio-inner"
      >
        
      </span>
    </span>
    <span>
      D
    </span>
  </label>
</div>
`;

exports[`renders ./components/radio/demo/size.md correctly 1`] = `
<div>
  <div>
    <div
      class="ant-radio-group ant-radio-group-large"
    >
      <label
        class="ant-radio-button-wrapper ant-radio-button-wrapper-checked"
      >
        <span
          class="ant-radio-button ant-radio-button-checked"
        >
          <input
            checked=""
            class="ant-radio-button-input"
            type="radio"
          >
            
          </input>
          <span
            class="ant-radio-button-inner"
          >
            
          </span>
        </span>
        <span>
          Hangzhou
        </span>
      </label>
      <label
        class="ant-radio-button-wrapper"
      >
        <span
          class="ant-radio-button"
        >
          <input
            class="ant-radio-button-input"
            type="radio"
          >
            
          </input>
          <span
            class="ant-radio-button-inner"
          >
            
          </span>
        </span>
        <span>
          Shanghai
        </span>
      </label>
      <label
        class="ant-radio-button-wrapper"
      >
        <span
          class="ant-radio-button"
        >
          <input
            class="ant-radio-button-input"
            type="radio"
          >
            
          </input>
          <span
            class="ant-radio-button-inner"
          >
            
          </span>
        </span>
        <span>
          Beijing
        </span>
      </label>
      <label
        class="ant-radio-button-wrapper"
      >
        <span
          class="ant-radio-button"
        >
          <input
            class="ant-radio-button-input"
            type="radio"
          >
            
          </input>
          <span
            class="ant-radio-button-inner"
          >
            
          </span>
        </span>
        <span>
          Chengdu
        </span>
      </label>
    </div>
  </div>
  <div
    style="margin-top:16px"
  >
    <div
      class="ant-radio-group"
    >
      <label
        class="ant-radio-button-wrapper ant-radio-button-wrapper-checked"
      >
        <span
          class="ant-radio-button ant-radio-button-checked"
        >
          <input
            checked=""
            class="ant-radio-button-input"
            type="radio"
          >
            
          </input>
          <span
            class="ant-radio-button-inner"
          >
            
          </span>
        </span>
        <span>
          Hangzhou
        </span>
      </label>
      <label
        class="ant-radio-button-wrapper"
      >
        <span
          class="ant-radio-button"
        >
          <input
            class="ant-radio-button-input"
            type="radio"
          >
            
          </input>
          <span
            class="ant-radio-button-inner"
          >
            
          </span>
        </span>
        <span>
          Shanghai
        </span>
      </label>
      <label
        class="ant-radio-button-wrapper"
      >
        <span
          class="ant-radio-button"
        >
          <input
            class="ant-radio-button-input"
            type="radio"
          >
            
          </input>
          <span
            class="ant-radio-button-inner"
          >
            
          </span>
        </span>
        <span>
          Beijing
        </span>
      </label>
      <label
        class="ant-radio-button-wrapper"
      >
        <span
          class="ant-radio-button"
        >
          <input
            class="ant-radio-button-input"
            type="radio"
          >
            
          </input>
          <span
            class="ant-radio-button-inner"
          >
            
          </span>
        </span>
        <span>
          Chengdu
        </span>
      </label>
    </div>
  </div>
  <div
    style="margin-top:16px"
  >
    <div
      class="ant-radio-group ant-radio-group-small"
    >
      <label
        class="ant-radio-button-wrapper ant-radio-button-wrapper-checked"
      >
        <span
          class="ant-radio-button ant-radio-button-checked"
        >
          <input
            checked=""
            class="ant-radio-button-input"
            type="radio"
          >
            
          </input>
          <span
            class="ant-radio-button-inner"
          >
            
          </span>
        </span>
        <span>
          Hangzhou
        </span>
      </label>
      <label
        class="ant-radio-button-wrapper"
      >
        <span
          class="ant-radio-button"
        >
          <input
            class="ant-radio-button-input"
            type="radio"
          >
            
          </input>
          <span
            class="ant-radio-button-inner"
          >
            
          </span>
        </span>
        <span>
          Shanghai
        </span>
      </label>
      <label
        class="ant-radio-button-wrapper"
      >
        <span
          class="ant-radio-button"
        >
          <input
            class="ant-radio-button-input"
            type="radio"
          >
            
          </input>
          <span
            class="ant-radio-button-inner"
          >
            
          </span>
        </span>
        <span>
          Beijing
        </span>
      </label>
      <label
        class="ant-radio-button-wrapper"
      >
        <span
          class="ant-radio-button"
        >
          <input
            class="ant-radio-button-input"
            type="radio"
          >
            
          </input>
          <span
            class="ant-radio-button-inner"
          >
            
          </span>
        </span>
        <span>
          Chengdu
        </span>
      </label>
    </div>
  </div>
</div>
`;
